syntax = "proto3";

package eureka.v1;

option go_package = "github.com/manabie-com/backend/pkg/manabuf/eureka/v1;epb";

enum AssignmentType {
  ASSIGNMENT_TYPE_NONE = 0;
  ASSIGNMENT_TYPE_TOPIC = 1;
  ASSIGNMENT_TYPE_LEARNING_OBJECTIVE = 2;
  ASSIGNMENT_TYPE_TASK = 3;
}

enum AssignmentStatus {
  ASSIGNMENT_STATUS_NONE = 0;
  ASSIGNMENT_STATUS_ACTIVE = 1;
  ASSIGNMENT_STATUS_ARCHIVED = 2;
}

enum SubmissionStatus {
  SUBMISSION_STATUS_NONE = 0;
  SUBMISSION_STATUS_NOT_MARKED = 1;
  SUBMISSION_STATUS_IN_PROGRESS = 2;
  SUBMISSION_STATUS_MARKED = 3;
  SUBMISSION_STATUS_RETURNED = 4;
}

enum ToDoItemType {
  TO_DO_ITEM_TYPE_NONE = 0;
  TO_DO_ITEM_TYPE_ASSIGNMENT = 1;
  TO_DO_ITEM_TYPE_LO = 2;
}

enum ToDoStatus {
  TO_DO_STATUS_NONE = 0;
  TO_DO_STATUS_ACTIVE = 1;
  TO_DO_STATUS_OVERDUE = 2;
  TO_DO_STATUS_COMPLETED = 3;
  TO_DO_STATUS_UPCOMING = 4;
}

enum ContentType {
  CONTENT_TYPE_NONE = 0;
  CONTENT_TYPE_ASSIGNMENT = 1;
  CONTENT_TYPE_LO = 2;
}

enum SearchType {
  SEARCH_TYPE_NONE = 0;
  SEARCH_TYPE_ASSIGNMENT_NAME = 1;
  SEARCH_TYPE_STUDENT_NAME = 2;
}

enum StudyPlanType {
  STUDY_PLAN_TYPE_NONE = 0;
  STUDY_PLAN_TYPE_COURSE = 1;
  STUDY_PLAN_TYPE_INDIVIDUAL = 2;
}

enum ImportMode {
  IMPORT_MODE_NONE = 0;
  IMPORT_MODE_CREATE = 1;
  IMPORT_MODE_UPDATE = 2;
}

enum StudyPlanTaskStatus {
  STUDY_PLAN_TASK_STATUS_NONE = 0;
  STUDY_PLAN_TASK_STATUS_IN_PROGRESS = 1;
  STUDY_PLAN_TASK_STATUS_COMPLETED = 2;
  STUDY_PLAN_TASK_STATUS_ERROR = 3;
}

enum StudyPlanStatus {
  STUDY_PLAN_STATUS_NONE = 0;
  STUDY_PLAN_STATUS_ACTIVE = 1;
  STUDY_PLAN_STATUS_ARCHIVED = 2;
}

enum Country {
  COUNTRY_NONE = 0;
  COUNTRY_MASTER = 1;
  COUNTRY_VN = 2;
  COUNTRY_ID = 3;
  COUNTRY_SG = 4;
  COUNTRY_JP = 5;
}

enum Subject {
  SUBJECT_NONE = 0;
  SUBJECT_MATHS = 1;
  SUBJECT_BIOLOGY = 2;
  SUBJECT_PHYSICS = 3;
  SUBJECT_CHEMISTRY = 4;
  SUBJECT_GEOGRAPHY = 5;
  SUBJECT_ENGLISH = 6;
  SUBJECT_ENGLISH_2 = 7;
  SUBJECT_JAPANESE = 8;
  SUBJECT_SCIENCE = 9;
  SUBJECT_SOCIAL_STUDIES = 10;
  SUBJECT_LITERATURE = 11;
}

enum TopicType {
  TOPIC_TYPE_NONE = 0;
  TOPIC_TYPE_LEARNING = 1;
  TOPIC_TYPE_PRACTICAL = 2;
  TOPIC_TYPE_EXAM = 3;
  TOPIC_TYPE_ASSIGNMENT = 4;
  TOPIC_TYPE_LIVE_LESSON = 5;
}

enum TopicStatus {
  TOPIC_STATUS_NONE = 0;
  TOPIC_STATUS_DRAFT = 1;
  TOPIC_STATUS_PUBLISHED = 2;
}

enum QuizStatus {
  QUIZ_STATUS_NEW = 0;
  QUIZ_STATUS_APPROVED = 1;
  QUIZ_STATUS_DELETED = 2;
}

enum QuizSetStatus {
  QUIZSET_STATUS_NEW = 0;
  QUIZSET_STATUS_APPROVED = 1;
  QUIZSET_STATUS_DELETED = 2;
}

enum QuizOptionConfig {
	QUIZ_OPTION_CONFIG_CASE_SENSITIVE = 0;
	QUIZ_OPTION_CONFIG_PARTIAL_CREDIT = 1;
  QUIZ_OPTION_CONFIG_PLAN_LIST = 2;
}

enum FlashcardQuizStudyStatus {
  FLASHCARD_QUIZ_STUDY_STATUS_NONE = 0;
  FLASHCARD_QUIZ_STUDY_STATUS_SKIPPED = 1;
  FLASHCARD_QUIZ_STUDY_STATUS_REMEMBERED = 2;
}

enum AchievementCrown {
  ACHIEVEMENT_CROWN_NONE = 0;
  ACHIEVEMENT_CROWN_BRONZE = 1;
  ACHIEVEMENT_CROWN_SILVER = 2;
  ACHIEVEMENT_CROWN_GOLD = 3;
}

enum ExamLOSubmissionResult {
	EXAM_LO_SUBMISSION_WAITING_FOR_GRADE = 0;
	EXAM_LO_SUBMISSION_PASSED = 1;
	EXAM_LO_SUBMISSION_FAILED = 2;
	EXAM_LO_SUBMISSION_COMPLETED = 3;
}